Add ImagesSnapshotController
